--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,12 +12,12 @@
       </div>
       <div class='bottom'>
         <h4>{{item.bio}}</h4>
-        <div class='question'>Q1</div>
+        <div class='question'>מה לדעתך היעדים והמדדים להצלחת הסדנא?</div>
         <h4>{{item.q1}}</h4>
-        <div class='question'>Q2</div>
+        <div class='question'>
+          למועמדים חדשים: מה ביכולות ובנסיון המוכח יכול לתרום ליעדים שציינת?<br/>למועמדים נוכחיים: מה תשנה/י ומה תמשיכ/י בעשייתך בוועד בשנה הקרובה?
+        </div>
         <h4>{{item.q2}}</h4>
-        <div class='question'>Q3</div>
-        <h4>{{item.q3}}</h4>
       </div>
     </div>
   </div>
