--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -40,8 +40,9 @@
             overflow-y: scroll;
 
             .question {
-                margin-top: 8px;
-                margin-bottom: 4px;
+                margin-top: 12px;
+                margin-bottom: 8px;
+                // font-size: 18px;
             }
         }
     }
@@ -68,6 +69,7 @@
     pre {
         width: 100%;
         overflow-x: scroll;
+        direction: ltr;
     }
 }
 
