--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -42,7 +42,12 @@
             .question {
                 margin-top: 12px;
                 margin-bottom: 8px;
+                font-weight: bold;
                 // font-size: 18px;
+            }
+
+            h4 {
+                font-weight: normal;
             }
         }
     }
