--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -18,24 +18,32 @@
     .swiper-slide {
         display: flex;
         flex-flow: column;
+        padding: 0 40px;
         .top {
-            padding: 10px 40px;
+            padding: 10px 0;
             display: flex;
             flex-flow: row;
             align-items: flex-start;
             justify-content: flex-start;
             img {
                 flex: 0 0 auto;
-                width: 250px;
-                max-width: 50%;
+                height: 250px;
             }
             .title {
                 padding: 20px;
-                font-size: 30px;
+                display: flex;
+                flex-flow: column;
+                height: 100%;
+                div {
+                    font-size: 30px;
+                }
+                a {
+                    margin-top: auto;
+                }
             }
         }
         .bottom {
-            padding: 10px 40px;
+            padding: 10px 0;
             margin-bottom: 40px;
             overflow-y: scroll;
 
@@ -48,6 +56,7 @@
 
             h4 {
                 font-weight: normal;
+                white-space: pre-wrap;
             }
         }
     }
