Fix mobile stylinh

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -27,7 +27,11 @@
             justify-content: flex-start;
             img {
                 flex: 0 0 auto;
-                height: 250px;
+                max-height: 250px;
+                height: 100%;
+                max-width: 50%;
+                object-fit: contain;
+                // object-position: top;
             }
             .title {
                 padding: 20px;
