Fix style issues in safari

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -25,13 +25,14 @@
             flex-flow: row;
             align-items: flex-start;
             justify-content: flex-start;
+            max-height: 250px;
+            height: 100%;
             img {
                 flex: 0 0 auto;
                 max-height: 250px;
                 height: 100%;
                 max-width: 50%;
                 object-fit: contain;
-                // object-position: top;
             }
             .title {
                 padding: 20px;
