Smaller small text

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -41,6 +41,10 @@
                 height: 100%;
                 div {
                     font-size: 30px;
+                    small {
+                        font-size: 18px;
+                        display: block;
+                    }
                 }
                 a {
                     margin-top: auto;
