Remove yotam and update instructions

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,13 +48,16 @@
 </div>
 
 <h3>1.
-  לאחר סיום הסימון - <br/>
-  יש להעתיק את תוכן ההצבעה המוצפן, להדביק לתוך הודעת דואר ולשלוח לכתובת <a href='mailto:vote@hasadna.org.il'>vote@hasadna.org.il</a><br/>
-יש לצרף להודעה (או לשלוח בהודעה נפרדת) צילום תעודה מזהה.
+  לאחר סיום הסימון יש לשלוח את ההצבעה לכתובת <a href='mailto:vote@hasadna.org.il'>vote@hasadna.org.il</a><br/>
+  <ul>
+    <li>ניתן לצלם מסך ולשלוח את התמונה במייל</li>
+    <li>ניתן לשלוח את ההצבעה באופן מילולי (כלומר, ״אני בוחר/ת ב...״)</li>
+    <li>מי שמעוניין לשמור את הצבעתו חשאית, יכול להעתיק את תוכן ההצבעה המוצפן, להדביק לתוך הודעת דואר ולשלוח</li>
+  </ul>
 </h3>
 <textarea [(ngModel)]='encrypted' readonly (click)='select($event)'></textarea>
 <h3>2.
-  זה המזהה הסודי של ההצבעה שלכם - באמצעותו תוכלו לוודא שהצבעתכם נקלטה ונרשמה.<br/>
+  זה המזהה הסודי של ההצבעה שלכם - אם שלחתם את המידע המוצפן, תוכלו באמצעותו לוודא שהצבעתכם נקלטה ונרשמה.<br/>
   כתבו אותו בצד ואל תראו לאף אחד על מנת לשמור על חשאיות ההצבעה:
 </h3>
 <h2>{{randId}}</h2>
