--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,7 +39,7 @@
   <div class="swiper-button-prev"></div>
 </swiper>
 
-<h3 style="text-decoration: underline; color: red">הצבעה לוועד - המערכת עדיין לא פעילה ומובאת כאן להתרשמות והיכרות</h3>
+<h3 style="text-decoration: underline; color: red">הצבעה לוועד - המערכת פעילה</h3>
 
 <h3>זו ההצבעה שלכם - יש לבחור עד 7 מועמדים ומועמדות (אפשר גם פחות):</h3>
 <div class='option' *ngFor='let item of names'>
